SDKs/googleapis.com/jobs/v3/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install git+https://github.com/speakeasy-api/openapi-directory.git#subdirectory=SDKs/googleapis.com/jobs/v3/python
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()


req = operations.JobsProjectsClientEventsCreateRequest(
    dollar_xgafv="2",
    create_client_event_request=shared.CreateClientEventRequest(
        client_event=shared.ClientEvent(
            create_time="provident",
            event_id="distinctio",
            extra_info={
                "unde": "nulla",
                "corrupti": "illum",
                "vel": "error",
                "deserunt": "suscipit",
            },
            job_event=shared.JobEvent(
                jobs=[
                    "magnam",
                    "debitis",
                ],
                type="JOB_EVENT_TYPE_UNSPECIFIED",
            ),
            parent_event_id="delectus",
            request_id="tempora",
        ),
    ),
    access_token="suscipit",
    alt="media",
    callback="minus",
    fields_="placeat",
    key="voluptatum",
    oauth_token="iusto",
    parent="excepturi",
    pretty_print=False,
    quota_user="nisi",
    upload_type="recusandae",
    upload_protocol="temporibus",
)
    
res = s.projects.jobs_projects_client_events_create(req, operations.JobsProjectsClientEventsCreateSecurity(
    option1=operations.JobsProjectsClientEventsCreateSecurityOption1(
        oauth2="Bearer YOUR_ACCESS_TOKEN_HERE",
        oauth2c="Bearer YOUR_ACCESS_TOKEN_HERE",
    ),
))

if res.client_event is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### projects

* `jobs_projects_client_events_create` - Report events issued when end user interacts with customer's application that uses Cloud Talent Solution. You may inspect the created events in [self service tools](https://console.cloud.google.com/talent-solution/overview). [Learn more](https://cloud.google.com/talent-solution/docs/management-tools) about self service tools.
* `jobs_projects_companies_create` - Creates a new company entity.
* `jobs_projects_companies_list` - Lists all companies associated with the service account.
* `jobs_projects_complete` - Completes the specified prefix with keyword suggestions. Intended for use by a job search auto-complete search box.
* `jobs_projects_jobs_batch_delete` - Deletes a list of Jobs by filter.
* `jobs_projects_jobs_create` - Creates a new job. Typically, the job becomes searchable within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_jobs_delete` - Deletes the specified job. Typically, the job becomes unsearchable within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_jobs_get` - Retrieves the specified job, whose status is OPEN or recently EXPIRED within the last 90 days.
* `jobs_projects_jobs_list` - Lists jobs by filter.
* `jobs_projects_jobs_patch` - Updates specified job. Typically, updated contents become visible in search results within 10 seconds, but it may take up to 5 minutes.
* `jobs_projects_jobs_search` - Searches for jobs using the provided SearchJobsRequest. This call constrains the visibility of jobs present in the database, and only returns jobs that the caller has permission to search against.
* `jobs_projects_jobs_search_for_alert` - Searches for jobs using the provided SearchJobsRequest. This API call is intended for the use case of targeting passive job seekers (for example, job seekers who have signed up to receive email alerts about potential job opportunities), and has different algorithmic adjustments that are targeted to passive job seekers. This call constrains the visibility of jobs present in the database, and only returns jobs the caller has permission to search against.
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
